k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gemini
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gemini
  template:
    metadata:
      labels:
        app: gemini
    spec:
      containers:
        - name: gemini
          image: narenreddy1/gemini:latest
          ports:
            - containerPort: 80
