k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gemini-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: gemini.narendras.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gemini-service
                port:
                  number: 80
